if (MSVC)
    if (CMAKE_BUILD_TYPE STREQUAL "Debug")
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ")
    else ()
        set(CMAKE_BUILD_TYPE "Release")
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  /fp:fast /Gy /Oi /Oy /O2 /Ot /Zi /EHsc ")
    endif ()
    ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
else ()
    if (CMAKE_BUILD_TYPE STREQUAL "Debug")
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g -Wall -Wno-unused-variable")
    else (CMAKE_BUILD_TYPE STREQUAL "Debug")
        set(CMAKE_BUILD_TYPE "Release")
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O2")
    endif (CMAKE_BUILD_TYPE STREQUAL "Debug")
endif ()

file(GLOB TINYFONT_SRC
        ${CMAKE_CURRENT_LIST_DIR}/tiny_font/*.c
        ${CMAKE_CURRENT_LIST_DIR}/tiny_font/*.cc
        ${CMAKE_CURRENT_LIST_DIR}/tiny_font/*.cpp)
include_directories(tiny_font)
add_executable(Hello_Font Hello_Font.cpp ${TINYFONT_SRC})
target_link_libraries(Hello_Font Common)
configure_file(DroidSerif-Bold.ttf ${CMAKE_CURRENT_BINARY_DIR}/DroidSerif-Bold.ttf COPYONLY)
configure_file(DroidSerif-Italic.ttf ${CMAKE_CURRENT_BINARY_DIR}/DroidSerif-Italic.ttf COPYONLY)
configure_file(DroidSerif-Regular.ttf ${CMAKE_CURRENT_BINARY_DIR}/DroidSerif-Regular.ttf COPYONLY)
configure_file(SourceHanSansCN-Normal.otf ${CMAKE_CURRENT_BINARY_DIR}/SourceHanSansCN-Normal.otf COPYONLY)
configure_file(${GLES_ROOT_DIR}/bin/libGLES_CM.dll ${CMAKE_CURRENT_BINARY_DIR}/libGLES_CM.dll COPYONLY)
configure_file(${GLES_ROOT_DIR}/bin/libGLESv2.dll ${CMAKE_CURRENT_BINARY_DIR}/libGLESv2.dll COPYONLY)
configure_file(${GLES_ROOT_DIR}/bin/libEGL.dll ${CMAKE_CURRENT_BINARY_DIR}/libEGL.dll COPYONLY)